# ai-gen-papers

./: .gitignore  README.md  TEMP.toml  gen_initial_tex.ipynb  generate_paper.py  pyproject.toml  requirements.txt  run_app.py  test_generate.py
Front-End/: index.html  pyproject.toml  requirements.txt  script.js  simpleapp.py  style.css
Front_End/: simpleapp.py
generate_tex/: Apart_jam_demo.ipynb  gen_paper_text.py  gen_papers_with_ref.ipynb  gen_papers_with_ref_and_pics.ipynb  gen_papers_with_ref_and_pics.py  generate_paper.py  get_keys.py  test_generate.py
gfx/: gen_data.ipynb  gen_graphics.py  gen_images.ipynb  plot.py  pyproject.toml
gfx/data/: GDP_growth.csv  GNP_growth.csv  Heights.csv  IMG_1.csv  IMG_2.csv
gfx/plot_funcs/: import_common.py  plot_GDP_growth.py  plot_GNP_growth.py  plot_Heights.py  plot_IMG_1.py  plot_IMG_2.py
tex/: generated_paper1.tex  generated_paper_with_ref.tex  generated_paper_with_ref1.tex  generated_paper_with_ref2.tex  generated_paper_with_ref3.tex  generated_paper_with_ref4.tex  generated_paper_with_ref5.tex  generated_paper_with_ref6.tex  generated_paper_with_ref7.tex
tex/with_figs/: generated_paper_with_ref7_figs.tex
