[tool.poetry]
name = "ai-gen-papers-front-end"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.23.0"
altair = "^5.4.0"
bokeh = "^3.5.2"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
jupyter = "^1.0.0"
streamlit = "^1.36.1"
transformers = "4.44.2"
sentence-transformers = "^3.0.1"
anthropic = "^0.34.1"
arxiv = "^2.1.3"
tiktoken = "^0.4"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
